--- a/charts/whoami/templates/deployment.yaml
+++ b/charts/whoami/templates/deployment.yaml
@@ -21,3 +21,5 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
