--- a/charts/gotify/values.yaml
+++ b/charts/gotify/values.yaml
@@ -26,3 +26,8 @@ ingress:
           pathType: ImplementationSpecific
 
 resources: {}
+
+defaultUser: {}
+  # name: admin
+  # pass: admin
+timezone: ""
