--- a/charts/gotify/values.yaml
+++ b/charts/gotify/values.yaml
@@ -3,8 +3,7 @@ replicaCount: 1
 image:
   repository: gotify/server
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: ""  # Defaults to chart appVersion
 
 nameOverride: ""
 fullnameOverride: ""
