feat: add security context

--- a/charts/gotify/values.yaml
+++ b/charts/gotify/values.yaml
@@ -10,6 +10,10 @@ fullnameOverride: ""
 
 podAnnotations: {}
 
+podSecurityContext: {}
+
+securityContext: {}
+
 service:
   type: ClusterIP
   port: 80
