--- a/charts/jdownloader/values.yaml
+++ b/charts/jdownloader/values.yaml
@@ -15,8 +15,9 @@ podSecurityContext: {}
 securityContext: {}
 
 service:
-  type: LoadBalancer
+  type: NodePort
   port: 3129
+  nodePort: 31290
 
 resources: {}
 
