feat(jdownloader): change service type to LoadBalancer

--- a/charts/jdownloader/values.yaml
+++ b/charts/jdownloader/values.yaml
@@ -15,9 +15,8 @@ podSecurityContext: {}
 securityContext: {}
 
 service:
-  type: NodePort
+  type: LoadBalancer
   port: 3129
-  nodePort: 31290
 
 resources: {}
 
