--- a/charts/gotify/templates/deployment.yaml
+++ b/charts/gotify/templates/deployment.yaml
@@ -31,8 +31,9 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
-          {{- if or .Values.defaultUser .Values.timezone }}
           env:
+            - name: TZ
+              value: {{ .Values.timezone | default "Europe/Berlin" | quote }}
             {{- if .Values.defaultUser.name }}
             - name: GOTIFY_DEFAULTUSER_NAME
               value: {{ .Values.defaultUser.name | quote }}
@@ -44,11 +45,6 @@ spec:
                   name: {{ include "gotify.fullname" . }}
                   key: defaultuser-pass
             {{- end }}
-            {{- if .Values.timezone }}
-            - name: TZ
-              value: {{ .Values.timezone | quote }}
-            {{- end }}
-          {{- end }}
           livenessProbe:
             httpGet:
               path: /
