chore(whoami): update version

--- a/charts/whoami/values.yaml
+++ b/charts/whoami/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: containous/whoami
+  repository: traefik/whoami
   pullPolicy: IfNotPresent
   tag: ""  # Defaults to chart appVersion
 
