--- a/charts/gotify/templates/deployment.yaml
+++ b/charts/gotify/templates/deployment.yaml
@@ -29,11 +29,13 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
           env:
             - name: TZ
               value: {{ .Values.timezone | default "Europe/Berlin" | quote }}
+            - name: GOTIFY_SERVER_PORT
+              value: "8080"
             {{- if .Values.defaultUser.name }}
             - name: GOTIFY_DEFAULTUSER_NAME
               value: {{ .Values.defaultUser.name | quote }}
