--- a/charts/whoami/templates/deployment.yaml
+++ b/charts/whoami/templates/deployment.yaml
@@ -27,8 +27,11 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
+          env:
+            - name: WHOAMI_PORT_NUMBER
+              value: "8080"
           livenessProbe:
             httpGet:
               path: /
