feat(readymedia): mount media dir read-only

--- a/charts/readymedia/templates/deployment.yaml
+++ b/charts/readymedia/templates/deployment.yaml
@@ -39,6 +39,7 @@ spec:
           volumeMounts:
             - mountPath: /media
               name: media
+              readOnly: true
           {{- end }}
       hostNetwork: true
       {{- if .Values.volumes.mediaPath }}
