--- a/charts/gotify/templates/secret.yaml
+++ b/charts/gotify/templates/secret.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "gotify.fullname" . }}
+  name: {{ include "common.fullname" . }}
   labels:
-    {{- include "gotify.labels" . | nindent 4 }}
+    {{- include "common.labels" . | nindent 4 }}
 type: Opaque
 data:
   defaultuser-pass: {{ .Values.defaultUser.pass | b64enc | quote }}
