--- a/charts/jdownloader/Chart.yaml
+++ b/charts/jdownloader/Chart.yaml
@@ -4,3 +4,7 @@ description: A free, open-source download management tool
 type: application
 version: 0.1.0
 appVersion: "2"
+dependencies:
+  - name: common
+    version: 0.1.0
+    repository: file://../common
