--- a/charts/gotify/Chart.yaml
+++ b/charts/gotify/Chart.yaml
@@ -4,3 +4,7 @@ description: A simple server for sending and receiving messages
 type: application
 version: 0.1.0
 appVersion: "2.1.4"
+dependencies:
+  - name: common
+    version: 0.1.0
+    repository: file://../common
