--- a/charts/jdownloader/templates/secret.yaml
+++ b/charts/jdownloader/templates/secret.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "jdownloader.fullname" . }}
+  name: {{ include "common.fullname" . }}
   labels:
-    {{- include "jdownloader.labels" . | nindent 4 }}
+    {{- include "common.labels" . | nindent 4 }}
 type: Opaque
 data:
   myJdAccount-password: {{ .Values.myJdAccount.password | b64enc | quote }}
