--- a/charts/readymedia/Chart.yaml
+++ b/charts/readymedia/Chart.yaml
@@ -4,3 +4,7 @@ description: ReadyMedia (formerly known as MiniDLNA) is a simple media server so
 type: application
 version: 0.1.0
 appVersion: "1.3.0"
+dependencies:
+  - name: common
+    version: 0.1.0
+    repository: file://../common
