--- a/charts/whoami/templates/deployment.yaml
+++ b/charts/whoami/templates/deployment.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "whoami.fullname" . }}
+  name: {{ include "common.fullname" . }}
   labels:
-    {{- include "whoami.labels" . | nindent 4 }}
+    {{- include "common.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      {{- include "whoami.selectorLabels" . | nindent 6 }}
+      {{- include "common.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -15,7 +15,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "whoami.selectorLabels" . | nindent 8 }}
+        {{- include "common.selectorLabels" . | nindent 8 }}
     spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
