--- a/charts/jdownloader/templates/service.yaml
+++ b/charts/jdownloader/templates/service.yaml
@@ -1,15 +1,1 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ include "common.fullname" . }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
-spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: direct-conn
-      protocol: TCP
-      name: direct-conn
-  selector:
-    {{- include "common.selectorLabels" . | nindent 4 }}
+{{- include "common.service" . }}
