--- a/charts/readymedia/templates/deployment.yaml
+++ b/charts/readymedia/templates/deployment.yaml
@@ -1,46 +1,23 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ include "common.fullname" . }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
+{{- include "common.deployment" (list . "readymedia.deployment") -}}
+{{- define "readymedia.deployment" -}}
 spec:
-  replicas: {{ .Values.replicaCount }}
-  selector:
-    matchLabels:
-      {{- include "common.selectorLabels" . | nindent 6 }}
   template:
-    metadata:
-      {{- with .Values.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      labels:
-        {{- include "common.selectorLabels" . | nindent 8 }}
     spec:
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          env:
+        - env:
             - name: MINIDLNA_MEDIA_DIR
               value: /media
             {{- if .Values.friendlyName }}
             - name: MINIDLNA_FRIENDLY_NAME
               value: {{ .Values.friendlyName | quote }}
             {{- end }}
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
           {{- if .Values.volumes.mediaPath }}
           volumeMounts:
             - mountPath: /media
               name: media
               readOnly: true
           {{- end }}
+          {{- include "common.container" . | nindent 10 }}
       hostNetwork: true
       {{- if .Values.volumes.mediaPath }}
       volumes:
@@ -49,3 +26,4 @@ spec:
             path: {{ .Values.volumes.mediaPath }}
             type: Directory
       {{- end }}
+{{- end -}}
