--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: "0"
+          fetch-depth: 0
 
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.2.0
