--- a/charts/gotify/templates/deployment.yaml
+++ b/charts/gotify/templates/deployment.yaml
@@ -1,37 +1,11 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ include "common.fullname" . }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
+{{- include "common.deployment" (list . "gotify.deployment") -}}
+{{- define "gotify.deployment" -}}
 spec:
-  replicas: {{ .Values.replicaCount }}
-  selector:
-    matchLabels:
-      {{- include "common.selectorLabels" . | nindent 6 }}
   template:
-    metadata:
-      {{- with .Values.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      labels:
-        {{- include "common.selectorLabels" . | nindent 8 }}
     spec:
       enableServiceLinks: false
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: 8080
-              protocol: TCP
-          env:
+        - env:
             - name: TZ
               value: {{ .Values.timezone | default "Europe/Berlin" | quote }}
             - name: GOTIFY_SERVER_PORT
@@ -47,6 +21,10 @@ spec:
                   name: {{ include "common.fullname" . }}
                   key: defaultuser-pass
             {{- end }}
+          ports:
+            - name: http
+              containerPort: 8080
+              protocol: TCP
           livenessProbe:
             httpGet:
               path: /
@@ -55,13 +33,12 @@ spec:
             httpGet:
               path: /
               port: http
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
           {{- if .Values.volumes.dataPath }}
           volumeMounts:
             - mountPath: /app/data
               name: data
           {{- end }}
+          {{- include "common.container" . | nindent 10 }}
       {{- if .Values.volumes.dataPath }}
       volumes:
         - name: data
@@ -69,3 +46,4 @@ spec:
             path: {{ .Values.volumes.dataPath }}
             type: Directory
       {{- end }}
+{{- end -}}
