--- a/charts/whoami/templates/deployment.yaml
+++ b/charts/whoami/templates/deployment.yaml
@@ -1,37 +1,16 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ include "common.fullname" . }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
+{{- include "common.deployment" (list . "whoami.deployment") -}}
+{{- define "whoami.deployment" -}}
 spec:
-  selector:
-    matchLabels:
-      {{- include "common.selectorLabels" . | nindent 6 }}
   template:
-    metadata:
-      {{- with .Values.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      labels:
-        {{- include "common.selectorLabels" . | nindent 8 }}
     spec:
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+        - env:
+            - name: WHOAMI_PORT_NUMBER
+              value: "8080"
           ports:
             - name: http
               containerPort: 8080
               protocol: TCP
-          env:
-            - name: WHOAMI_PORT_NUMBER
-              value: "8080"
           livenessProbe:
             httpGet:
               path: /
@@ -40,5 +19,5 @@ spec:
             httpGet:
               path: /
               port: http
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+          {{- include "common.container" . | nindent 10 }}
+{{- end -}}
