refactor: move secret to common library

--- a/charts/gotify/templates/secret.yaml
+++ b/charts/gotify/templates/secret.yaml
@@ -1,11 +1,7 @@
 {{- if .Values.defaultUser.pass -}}
-apiVersion: v1
-kind: Secret
-metadata:
-  name: {{ include "common.fullname" . }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
-type: Opaque
+{{- include "common.secret" (list . "gotify.secret") -}}
+{{- end }}
+{{- define "gotify.secret" -}}
 data:
   defaultuser-pass: {{ .Values.defaultUser.pass | b64enc | quote }}
-{{- end }}
+{{- end -}}
