--- a/charts/jdownloader/templates/secret.yaml
+++ b/charts/jdownloader/templates/secret.yaml
@@ -1,11 +1,7 @@
 {{- if .Values.myJdAccount.password -}}
-apiVersion: v1
-kind: Secret
-metadata:
-  name: {{ include "common.fullname" . }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
-type: Opaque
+{{- include "common.secret" (list . "jdownloader.secret") -}}
+{{- end }}
+{{- define "jdownloader.secret" -}}
 data:
   myJdAccount-password: {{ .Values.myJdAccount.password | b64enc | quote }}
-{{- end }}
+{{- end -}}
