--- a/charts/kibitzr/templates/deployment.yaml
+++ b/charts/kibitzr/templates/deployment.yaml
@@ -1,28 +1,39 @@
 {{- include "common.deployment" (list . "kibitzr.deployment") -}}
 {{- define "kibitzr.deployment" -}}
+{{- $fullName := include "common.fullname" . -}}
 spec:
   template:
     spec:
       containers:
         - command: ["kibitzr"]
           args: ["run"]
-          workingDir: /data
+          workingDir: /working-dir
+          {{- if .Values.secrets }}
+          env:
+            {{- range $key, $value := .Values.secrets }}
+            - name: {{ $key | snakecase | upper }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $fullName }}
+                  key: {{ $key }}
+            {{- end }}
+          {{- end }}
           volumeMounts:
-            - mountPath: /data
-              name: data
-            {{- if .Values.volumes.configPath }}
-            - mountPath: /.config/kibitzr
+            - mountPath: /working-dir
+              name: working-dir
+            - mountPath: /working-dir/kibitzr.yml
               name: config
-              readOnly: true
+              subPath: kibitzr.yml
+            {{- if .Values.kibitzrCredsConfig }}
+            - mountPath: /working-dir/kibitzr-creds.yml
+              name: config
+              subPath: kibitzr-creds.yml
             {{- end }}
           {{- include "common.container" . | nindent 10 }}
       volumes:
-        - name: data
+        - name: working-dir
           emptyDir: {}
-        {{- if .Values.volumes.configPath }}
         - name: config
-          hostPath:
-            path: {{ .Values.volumes.configPath }}
-            type: Directory
-        {{- end }}
+          configMap:
+            name: {{ $fullName }}
 {{- end -}}
