--- a/charts/whoami/Chart.yaml
+++ b/charts/whoami/Chart.yaml
@@ -3,6 +3,7 @@ name: whoami
 description: Tiny Go webserver that prints os information and HTTP request to output
 type: application
 version: 0.1.0
+# renovate: image=traefik/whoami
 appVersion: "v1.8.6"
 dependencies:
   - name: common
