--- a/charts/n8n/templates/deployment.yaml
+++ b/charts/n8n/templates/deployment.yaml
@@ -6,6 +6,8 @@ spec:
       enableServiceLinks: false
       containers:
         - env:
+            - name: GENERIC_TIMEZONE
+              value: {{ .Values.timezone | default "Europe/Berlin" | quote }}
             - name: TZ
               value: {{ .Values.timezone | default "Europe/Berlin" | quote }}
             {{- if or .Values.basicAuthUser.name .Values.basicAuthUser.password }}
