--- a/charts/n8n/values.yaml
+++ b/charts/n8n/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: n8nio/n8n
   pullPolicy: IfNotPresent
-  tag: ""  # Defaults to chart appVersion
+  tag: "latest@sha256:3ec353a93b512f6ca9c1b4203e13593dafe866b677ab6f446e6707decef52a36"
 
 nameOverride: ""
 fullnameOverride: ""
