--- a/.github/workflows/lint-test-release.yml
+++ b/.github/workflows/lint-test-release.yml
@@ -1,4 +1,4 @@
-name: Lint and Test Charts
+name: Lint, Test and Release Charts
 
 on:
   push:
@@ -36,3 +36,22 @@ jobs:
 
       - name: Run chart-testing (install)
         run: ct install --config .github/ct-install-config.yaml
+
+  release:
+    needs: [lint, test]
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.5.0
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
