--- a/charts/readymedia/templates/deployment.yaml
+++ b/charts/readymedia/templates/deployment.yaml
@@ -9,37 +9,50 @@ spec:
               value: V,/media/video
             - name: MINIDLNA_MEDIA_DIR_2
               value: /media/photo
+            - name: MINIDLNA_MEDIA_DIR_3
+              value: A,/media/audio
             {{- if .Values.friendlyName }}
             - name: MINIDLNA_FRIENDLY_NAME
               value: {{ .Values.friendlyName | quote }}
             {{- end }}
-          {{- if or .Values.volumes.videoPath .Values.volumes.photoPath }}
+          {{- if or .Values.volumes.videoPath .Values.volumes.photoPath .Values.volumes.audioPath }}
           volumeMounts:
-            {{- if or .Values.volumes.videoPath }}
+            {{- if .Values.volumes.videoPath }}
             - mountPath: /media/video
               name: video
               readOnly: true
             {{- end }}
-            {{- if or .Values.volumes.photoPath }}
+            {{- if .Values.volumes.photoPath }}
             - mountPath: /media/photo
               name: photo
+              readOnly: true
+            {{- end }}
+            {{- if .Values.volumes.audioPath }}
+            - mountPath: /media/audio
+              name: audio
               readOnly: true
             {{- end }}
           {{- end }}
           {{- include "common.container" . | nindent 10 }}
       hostNetwork: true
-      {{- if or .Values.volumes.videoPath .Values.volumes.photoPath }}
+      {{- if or .Values.volumes.videoPath .Values.volumes.photoPath .Values.volumes.audioPath }}
       volumes:
-        {{- if or .Values.volumes.videoPath }}
+        {{- if .Values.volumes.videoPath }}
         - name: video
           hostPath:
             path: {{ .Values.volumes.videoPath }}
             type: Directory
         {{- end }}
-        {{- if or .Values.volumes.photoPath }}
+        {{- if .Values.volumes.photoPath }}
         - name: photo
           hostPath:
             path: {{ .Values.volumes.photoPath }}
+            type: Directory
+        {{- end }}
+        {{- if .Values.volumes.audioPath }}
+        - name: audio
+          hostPath:
+            path: {{ .Values.volumes.audioPath }}
             type: Directory
         {{- end }}
       {{- end }}
