feat(n8n): add extra volumes

--- a/charts/n8n/ci/max-values.yaml
+++ b/charts/n8n/ci/max-values.yaml
@@ -1,6 +1,12 @@
 volumes:
   mediaPath: /tmp
 
+extraVolumes:
+  - name: test
+    mountPath: /test
+    hostPath: /tmp
+    readOnly: true
+
 basicAuthUser:
   name: test
   password: test
