feat: add second host

--- a/charts/gotify/values.yaml
+++ b/charts/gotify/values.yaml
@@ -27,6 +27,10 @@ ingress:
       paths:
         - path: /
           pathType: ImplementationSpecific
+    - host: gotify.192-168-178-31.nip.io
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
 
 resources: {}
 
