--- a/charts/whoami/values.yaml
+++ b/charts/whoami/values.yaml
@@ -27,5 +27,9 @@ ingress:
       paths:
         - path: /
           pathType: ImplementationSpecific
+    - host: whoami.192-168-178-31.nip.io
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
 
 resources: {}
