fix(n8n): use new n8n data path

--- a/charts/n8n/templates/deployment.yaml
+++ b/charts/n8n/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
               port: http
           {{- if .Values.volumes.dataPath }}
           volumeMounts:
-            - mountPath: /root/.n8n
+            - mountPath: /home/node/.n8n
               name: data
             {{- range .Values.extraVolumes }}
             - mountPath: {{ .mountPath }}
