feat: add node selector

--- a/charts/readymedia/values.yaml
+++ b/charts/readymedia/values.yaml
@@ -16,6 +16,12 @@ securityContext: {}
 
 resources: {}
 
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
+
 volumes:
   videoPath: ""
   photoPath: ""
