feat(monitoring): add alert rules

--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -27,23 +27,9 @@ kube-prometheus-stack:
             receiver: gotify
             matchers:
               - receiver = "gotify"
-    dashboardProviders:
-      dashboardproviders.yaml:
-        apiVersion: 1
-        providers:
-          - name: 'default'
-            orgId: 1
-            folder: ''
-            type: file
-            disableDeletion: true
-            editable: true
-            options:
-              path: /var/lib/grafana/dashboards/default
-    dashboards:
-      default:
-        argo-cd:
-          gnetId: 14584
-          datasource: default
+    sidecar:
+      alerts:
+        enabled: true
   kubeApiServer:
     enabled: false
   kubelet:
