--- a/charts/syncthing/values.yaml
+++ b/charts/syncthing/values.yaml
@@ -14,7 +14,13 @@ podSecurityContext: {}
 
 securityContext: {}
 
-resources: {}
+resources:
+  requests:
+    memory: "128Mi"
+    cpu: "5m"
+  limits:
+    memory: "512Mi"
+    cpu: "25m"
 
 nodeSelector: {}
 
