feat(n8n): improve readiness probes

--- a/charts/n8n/templates/deployment.yaml
+++ b/charts/n8n/templates/deployment.yaml
@@ -14,14 +14,18 @@ spec:
             - name: http
               containerPort: 5678
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: http
           readinessProbe:
             httpGet:
               path: /healthz
               port: http
+            initialDelaySeconds: 20
+            periodSeconds: 10
+            failureThreshold: 4
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: http
+            initialDelaySeconds: 60
           {{- if .Values.volumes.dataPath }}
           volumeMounts:
             - mountPath: /home/node/.n8n
